@@ -5,4 +5,5 @@
 	TextColor = "IRCColorCustom 0 0 0";
 	BufferLines = 1000;
 	WrapIndent = "0.0";
+	DefaultQuitMessage = "[TalkSoup] Get it today: http://talksoup.sf.net";
 }
